
  * Add apport/crashdb.py: Abstract crash database interface. This also offers
    a factory function get_crashdb() which reads a configuration file to find
    the default crash database to be used.
  * Add ./crashdb.conf: Crash database configuration file, for Ubuntu on
    Launchpad. Modify setup.py and debian/python-apport.install to ship it in
    python-apport.
  * Add apport/crashdb_impl/launchpad.py: Launchpad implementation of crash
    database interface.
  * apport/ui.py: Drop LP specific bits and move towards new CrashDatabase
    interface.
  * apport/ui.py, test suite: Do not overwrite file_report() any more, but
    use a dummy CrashDatabase. This will test the actual file_report()
    implementation and allows the test suite to check the precise value of
    opened URLs.
  * debian/rules: Install the crashdb implementations in backends/ into
    apport/, and remove them again on clean.
  * apport/{report,ui}.py: Move UserInterface.create_crash_bug_title() and its
    test cases to Report.standard_title(). It is much more appropriate there
    and can be used in the retracer as well.
  * bin/apport-retrace: Drop LP specific bits and move to CrashDatabase
    interface. Remove the --remove-tag option, we really should not have it
    here; remove it from man/apport-retrace.1 as well.
  * bin/apport-chroot: Drop LP specific bits and move to CrashDatabase
    interface.
  * bin/launchpad-crash-digger: Remove retracing tag directly instead of
    passing --remove-tag to apport-chroot. This is a much cleaner design and
    avoids infinitely looping on some weirdly failing retraces.
  * bin/apport-chroot: Drop --remove-tag option here, too.

  Other fixes:
  * po/de.po: Update.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Sun, 20 May 2007 22:30:30 +0200

apport (0.80) UNRELEASED; urgency=low

  Some debranding:

  * setup.py: Use apport wiki home page for 'url'.
  * Remove 'X-Ubuntu-Gettext-Domain' from *.desktop.in, since langpack.mk will